--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           Currently studying at FST Mohammedia.  <br>
           I'm currently looking for new opportunities.
         </p>
-        <a href="karima_belkhatir_PFE.pdf" download class="cta">Download Resume</a> 
+        <a href="Karima.Belkhatir.SI.pdf" download class="cta">Download Resume</a> 
       </div>
     </div>
   </section>
