--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <div class="col-left">
         <div class="about-img">
           <!-- <img src="./img/img-2.png" alt="img"> -->
-          <img src="./img/karima.png" alt="img">
+          <img src="./img/karima3.png" alt="img">
         </div>
       </div>
       <div class="col-right">
