--- a/index.html
+++ b/index.html
@@ -58,31 +58,26 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>I'm a Full-stack Developer based in Casablanca, Morocco 
+        <p>I'm a Full-stack Developer based in Rabat, Morocco 
           specializing in building and designing exceptional, high-quality websites and applications. 
         </p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>back-end development</h2>
-          <p>I provide custom back-end development for various web apps. 
-            Whatever your requirements, I will provide you with a customized solution that will 
-            help you achieve your goals.</p>
+          <h2>Back-end development</h2>
+          <p>I specialize in providing bespoke back-end development for various web applications. My expertise ensures robust and scalable solutions tailored to your specific requirements, helping you achieve optimal performance and seamless integration within your digital infrastructure.</p>
         </div> 
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>frontend development</h2>
-          <p>I build innovative, responsive, and user-centric solutions. <br> I designe interfaces with close 
-            attention to detail and look great on both desktop screens and mobile devices. <br>
-          </p>
+          <h2>Frontend development</h2>
+          <p>I create innovative, responsive, and user-centric web interfaces. By focusing on the seamless blend of aesthetics and functionality, I design solutions that not only look great on both desktop and mobile devices but also provide an intuitive and engaging user experience.
+          </p><br><br>
         </div> 
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Data  Analyst</h2>
-          <p><br>I can gather, cleans, sort, and analyze data sets to help solve problems using variety of 
-            tools like Microsoft Excel, R or Python. <br>
-          <br>
+          <h2>Microsoft D365 CRM Consultant</h2>
+          <p>As a Microsoft Dynamics 365 Consultant, I excel in tailoring the CRM platform to the unique needs of businesses. With a focus on integration and user adoption, I design and implement solutions that streamline customer interactions, enhance data visibility, and drive strategic growth.
           </p>
         </div> 
       </div>
@@ -244,17 +239,15 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <!-- <img src="./img/img-2.png" alt="img"> -->
+          <!-- <img src="./img/imgCV.jpg" alt="img"> -->
           <img src="./img/karima3.png" alt="img">
         </div>
       </div>
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
-        <p>I'm a Full-stack Developer based in Casablanca, Morocco 
-          specializing in building and designing exceptional, high-quality websites and applications. <br>
-          Currently studying at FST Mohammedia.  <br>
-          I'm currently looking for new opportunities.
+        <h2>Full-stack Developer</h2>
+        <p>I'm a Full-stack Developer with over 3 years of experience in software development for companies of various sizes. <br>
+          Passionate about solving complex problems and optimizing performance.
         </p>
         <a href="Karima.Belkhatir.SI.pdf" download class="cta">Download Resume</a> 
       </div>
@@ -289,8 +282,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <!-- <h2>Agadir, Maroc</h2> -->
-            <h2>mohammedia, Maroc</h2>
+            <h2>Rabat, Morocco</h2>
           </div>
         </div>
       </div>
@@ -316,7 +308,8 @@
           <a href="https://ma.linkedin.com/in/karima-belkhatir"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://ma.linkedin.com/in/karima-belkhatir"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+          <a href="https://ma.linkedin.com/in/karima-belkhatir"><img src="https://img.icons8.com/?size=100&id=108650&format=png&color=000000" /></a>
+          
         </div>
         <div class="social-item">
           <a href="https://ma.linkedin.com/in/karima-belkhatir"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png" /></a>
