--- a/index.html
+++ b/index.html
@@ -320,15 +320,16 @@
   </section>
   <!-- End Footer -->
   <script src="./app.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google tag (gtag.js) - Google Ads: 123456 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-03PHL9D37Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-03PHL9D37Q');
+  gtag('config', 'G-03PHL9D37Q', {'allow_enhanced_conversions':true});
 </script>
+
 </body>
 
 </html>
