--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" translate="no">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google" content="notranslate">
   <link rel="stylesheet" href="style.css">
   <title>Portfolio</title>
   <link rel="shortcut icon" type="image/icon" href="img/web-programming.png"/>
@@ -85,56 +84,6 @@
     </div>
   </section>
   <!-- End Service Section -->
-
-  <!-- Experience Section -->
-  <section id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h1 class="section-title">Academic <span>Projects</span></h1>
-      </div>
-      <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Al barid Bank</h1>
-            <h2>web application</h2>
-            <br>
-            <p>Anailis os an Ecommerce website with a nice looking, easy to use, and with the ability to add 
-              themes and manage products and sales. <br>
-              Technical environment :  Angular, JavaEE, Spring (Boot, MVC, Security, Data JPA), Maven, MySQL, HTML5, CSS3, Bootstrap, JavaScript.</p>
-            </p>
-          </div>
-          <div class="project-img">
-            <img src="img/anailis.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Logigroup</h1>
-            <h2>web application</h2>
-            <br>
-            <p>freelancer is a convenient freelance services platform<br>
-              Technical environment :  JavaEE, Spring (Boot, MVC, Security, Data JPA), Maven, MySQL, HTML5, CSS3, Bootstrap, JavaScript.</p>
-          </div>
-          <div class="project-img">
-            <img src="img/Logigroup-logo.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Trendile</h1>
-            <h2>web application</h2>
-            <br>
-            <p>Hotel-Du-Maroc is a hotel reservation web app through which guests can create secure online reservations. <br>
-              Technical environment :  PHP, HTML5, CSS3, Bootstrap, MySQL.</p>
-          </div>
-          <div class="project-img">
-            <!-- <img src="" alt="img"> -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Projects Section -->
 
    <!-- Technologies Section -->
    <section id="Technologies">
