--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google" content="notranslate">
   <link rel="stylesheet" href="style.css">
   <title>Portfolio</title>
   <link rel="shortcut icon" type="image/icon" href="img/web-programming.png"/>
